# graphql-covid-data

./: ARCHITECTURE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yaml
db/: exec.sh
db-introspector/: Cargo.toml
db-introspector/src/: generator.rs  hold.rs  lib.rs  main.rs  parser.rs  schema.rs
db-introspector/src/models/: AntibodyByAge.rs  AntibodyByAgeModel.rs  ByAgeModel.rs  ByPovertyModel.rs  ByRaceModel.rs  BySexModel.rs  antibody_by_age.rs  empty.rs  mod.rs  posts.rs
db-introspector/templates/: empty.txt  model.txt
server/: .db-schema-parser-config.json  Cargo.toml  Dockerfile  README.md  deploy.sh
server/src/: config.rs  context.rs  db_conn.rs  lib.rs  main.rs  schema.rs
server/src/graphql/: AntibodyByAgeQuery.rs  mod.rs
server/src/models/: AntibodyByAgeModel.rs  AntibodyByBoroModel.rs  AntibodyByModzctaModel.rs  AntibodyByPovertyModel.rs  AntibodyBySexModel.rs  ByAgeModel.rs  ByBoroModel.rs  ByPovertyModel.rs  ByRaceModel.rs  BySexModel.rs  CaserateByModzctaModel.rs  CaserateByModzctaPrimeModel.rs  CasesByDayModel.rs  DataByDayModel.rs  DataByModzctaModel.rs  DeathsByBoroAgeModel.rs  DeathsByBoroModel.rs  DeathsByDayModel.rs  DeathsByRaceAgeModel.rs  DeathsByRaceModel.rs  DeathsByUnderlyingConditionsModel.rs  GroupCasesByBoroModel.rs  GroupDataByBoroModel.rs  GroupDeathByBoroModel.rs  GroupHospByBoroModel.rs  HospByDayModel.rs  PercentPositiveByModzctaModel.rs  PercentpositiveByModzctaPrimeModel.rs  ProbableConfirmedByAgeModel.rs  ProbableConfirmedByBoroModel.rs  ProbableConfirmedByLocationModel.rs  (+30 more)
server/templates/: model.txt
(+116 files in other folders)
