[package]
name = "db-introspector"
version = "0.1.0"
authors = ["hgking <hgmaxwellking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
hyper = "0.13"
juniper = "0.15"
juniper_hyper = "0.6.0"
nom = "6.0.1"
pretty_env_logger = "0.4"
regex = "1"
tokio = "0.2"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
