[package]
name = "server"
version = "0.1.0"
authors = ["hgking <hgmaxwellking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
hyper = "0.13"
juniper = "0.15.5"
juniper_warp = "0.6.3"
log = "0.4.14"
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", features = ["tls"] }
